feat: Add option to ignore theme

--- a/src/options.html
+++ b/src/options.html
@@ -17,11 +17,15 @@
 		<label for="light">
 			Light theme
 		</label>
-		<select id="light"></select>
+		<select id="light">
+			<option value="-1">Disabled</option>
+		</select>
 		<label for="dark">
 			Dark theme
 		</label>
-		<select id="dark"></select>
+		<select id="dark">
+			<option value="-1">Disabled</option>
+		</select>
 		<script type="module" src="options.js"></script>
 	</body>
 </html>
